--- a/UIs/nCustomPlot.ui
+++ b/UIs/nCustomPlot.ui
@@ -75,7 +75,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+          <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/font.png</normaloff>:/icons/font.png</iconset>
          </property>
         </widget>
@@ -564,11 +564,12 @@
    <addaction name="actionRefresh"/>
    <addaction name="actionCopy"/>
    <addaction name="actionSave"/>
+   <addaction name="actionCopyImage"/>
    <addaction name="actionExport"/>
   </widget>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
    </property>
    <property name="text">
@@ -580,7 +581,7 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
    </property>
    <property name="text">
@@ -592,7 +593,7 @@
   </action>
   <action name="actionExport">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
    </property>
    <property name="text">
@@ -604,7 +605,7 @@
   </action>
   <action name="actionLoadPref">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/loadPref.png</normaloff>:/icons/loadPref.png</iconset>
    </property>
    <property name="text">
@@ -616,7 +617,7 @@
   </action>
   <action name="actionSavePref">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/savePref.png</normaloff>:/icons/savePref.png</iconset>
    </property>
    <property name="text">
@@ -628,7 +629,7 @@
   </action>
   <action name="actionRefresh">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
    </property>
    <property name="text">
@@ -640,7 +641,7 @@
   </action>
   <action name="actionChangeFonts">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/font.png</normaloff>:/icons/font.png</iconset>
    </property>
    <property name="text">
@@ -650,13 +651,25 @@
     <string>Change all fonts</string>
    </property>
   </action>
+  <action name="actionCopyImage">
+   <property name="icon">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+     <normaloff>:/icons/copyImage.png</normaloff>:/icons/copyImage.png</iconset>
+   </property>
+   <property name="text">
+    <string>Export</string>
+   </property>
+   <property name="toolTip">
+    <string>Copy image</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>plotTitle</tabstop>
   <tabstop>fontTitle</tabstop>
  </tabstops>
  <resources>
-  <include location="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
